src/test/ui/builtin-superkinds/builtin-superkinds-in-metadata.stderr
error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/builtin-superkinds-in-metadata.rs:13:23
   |
LL | impl <T:Sync+'static> RequiresRequiresShareAndSend for X<T> { }
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `T` cannot be sent between threads safely
   | 
  ::: $DIR/auxiliary/trait_superkinds_in_metadata.rs:7:58
   |
LL | pub trait RequiresRequiresShareAndSend : RequiresShare + Send { }
   |                                                          ---- required by `trait_superkinds_in_metadata::RequiresRequiresShareAndSend` here
   |
   = help: within `X<T>`, the trait `std::marker::Send` is not implemented for `T`
help: consider further restricting this bound with `+ std::marker::Send`
  --> $DIR/builtin-superkinds-in-metadata.rs:13:9
   |
LL | impl <T:Sync+'static> RequiresRequiresShareAndSend for X<T> { }
   |         ^^^^^^^^^^^^
   = note: required because it appears within the type `X<T>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
